--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -32,24 +32,35 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="OK" />
+            android:text="@string/submitText" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/searchLinearLayout">
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@id/searchLinearLayout"
+        android:paddingBottom="20dp">
 
+        <!-- TODO : Ajuster le width à la taille de l'écran -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recipeListRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="550dp"
             android:layout_marginTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
+           />
+
+        <ImageView
+            android:id="@+id/loadingImageView"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_gravity="center"
+            android:visibility="visible"
+            android:src="@drawable/loading"/>
 
     </LinearLayout>
 
